feat: Implement local SQLite cache for FIPE data synchronization
- Added FipeLocalCache class for local data caching and synchronization with Supabase.
- Created database schema for storing reference tables, brands, models, fuel years, and FIPE values.
- Implemented methods for saving, retrieving, and clearing cache data.
- Added crawling module for fetching data from FIPE API, including functions for retrieving reference tables, brands, models, and vehicle values.
- Introduced Supabase client for database interactions with environment variable configuration.
- Removed deprecated SSL configuration file.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,28 @@
-# Supabase Configuration
-# Copie este arquivo para .env e preencha com suas credenciais
+# ===================================================
+# FIPE Crawler - Configurações de Ambiente
+# ===================================================
+# 
+# INSTRUÇÕES:
+# 1. Copie este arquivo para .env
+# 2. Preencha as credenciais do Supabase
+# 3. NUNCA commite o arquivo .env (já está no .gitignore)
 
-SUPABASE_URL=your_project_url_here
-SUPABASE_KEY=your_api_key_here
+# ===================================================
+# SUPABASE (Opcional - para cache remoto)
+# ===================================================
+# Obtenha em: https://app.supabase.com/project/_/settings/api
+
+# URL do seu projeto Supabase
+SUPABASE_URL=https://seu-projeto.supabase.co
+
+# Chave anon/public do Supabase (role para acesso público)
+SUPABASE_KEY=sua_chave_anon_aqui
+
+# ===================================================
+# NOTAS
+# ===================================================
+# 
+# • O .env é OPCIONAL se usar apenas SQLite local
+# • Scripts funcionam mesmo sem Supabase configurado
+# • Para upload: execute upload_para_supabase.py após popular localmente
+# • Mantenha a SUPABASE_KEY segura (não compartilhe publicamente)
